--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -25,14 +25,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-title" content="SABnzbd" />
     
-    <link rel="apple-touch-icon" sizes="57x57" href="${root}staticcfg/ico/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="${root}staticcfg/ico/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="${root}staticcfg/ico/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="${root}staticcfg/ico/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="${root}staticcfg/ico/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="${root}staticcfg/ico/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="${root}staticcfg/ico/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="${root}staticcfg/ico/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="${root}staticcfg/ico/apple-touch-icon-76x76-precomposed" />
+    <link rel="apple-touch-icon" sizes="120x120" href="${root}staticcfg/ico/apple-touch-icon-120x120-precomposed" />
+    <link rel="apple-touch-icon" sizes="152x152" href="${root}staticcfg/ico/apple-touch-icon-152x152-precomposed" />
+    <link rel="apple-touch-icon" sizes="180x180" href="${root}staticcfg/ico/aapple-touch-icon-180x180-precomposed" />        
+    <link rel="icon" sizes="192x192" href="${root}staticcfg/ico/touch-icon-192x192.png" />
 
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/bootstrap/css/bootstrap.min.css" /> 
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?p=$pid" />
