--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -24,14 +24,11 @@
   #end if#
 
   <meta name="apple-mobile-web-app-title" content="SABnzbd" />
-  <link rel="apple-touch-icon" sizes="57x57" href="./staticcfg/ico/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="./staticcfg/ico/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="./staticcfg/ico/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="./staticcfg/ico/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="./staticcfg/ico/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="./staticcfg/ico/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76-precomposed" />
+  <link rel="apple-touch-icon" sizes="120x120" href="./staticcfg/ico/apple-touch-icon-120x120-precomposed" />
+  <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/aapple-touch-icon-180x180-precomposed" />        
+  <link rel="icon" sizes="192x192" href="./staticcfg/ico/touch-icon-192x192.png" />
 
   <script type="text/javascript" src="${path}static/javascripts/lib.js?$version"></script>
 
